Bug 430743 - "Apply" button is active in Elisa settings even when there is no change to apply
Summary: "Apply" button is active in Elisa settings even when there is no change to apply
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-23 11:31 UTC by Patrick Silva
Modified: 2021-01-15 08:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-12-23 11:31:13 UTC
SUMMARY
in the settings window of KDE apps like Dolphin, Konsole, Kate and Gwenview
the "Apply" button only becomes active when we change some setting.
But the "Apply" button of Elisa settings is active even when there is no
change to apply.

STEPS TO REPRODUCE
1. open Elisa settings
2. 
3. 

OBSERVED RESULT
"Apply" button is active despite no setting was changed

EXPECTED RESULT
greyed out "Apply" button until some setting is changed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-01-05 14:27:57 UTC
Confirmed.
Comment 2 Matthieu Gallien 2021-01-10 21:48:32 UTC
https://invent.kde.org/multimedia/elisa/-/merge_requests/208 is pending review with a fix for this bug.
Comment 3 Matthieu Gallien 2021-01-14 22:20:13 UTC
Git commit 9f07adda03d3b8f1fde87638aeb09b115ab46c0d by Matthieu Gallien.
Committed on 14/01/2021 at 21:34.
Pushed by mgallien into branch 'master'.

ensure the configuration dialog is not dirty when just open

avoid setting it dirty when reading the setting during the first init

when clicking on cancel, ensure that the c++ backend is reset

M  +34   -11   src/localFileConfiguration/elisaconfigurationdialog.cpp
M  +2    -0    src/localFileConfiguration/elisaconfigurationdialog.h
M  +4    -1    src/qml/ElisaConfigurationDialog.qml

https://invent.kde.org/multimedia/elisa/commit/9f07adda03d3b8f1fde87638aeb09b115ab46c0d
Comment 4 Matthieu Gallien 2021-01-15 08:13:18 UTC
Git commit d825da3dd869dc2cec45a80ecd6351bc241fafcc by Matthieu Gallien.
Committed on 15/01/2021 at 08:10.
Pushed by mgallien into branch 'release/20.12'.

ensure the configuration dialog is not dirty when just open

avoid setting it dirty when reading the setting during the first init

when clicking on cancel, ensure that the c++ backend is reset

M  +34   -11   src/localFileConfiguration/elisaconfigurationdialog.cpp
M  +2    -0    src/localFileConfiguration/elisaconfigurationdialog.h
M  +4    -1    src/qml/ElisaConfigurationDialog.qml

https://invent.kde.org/multimedia/elisa/commit/d825da3dd869dc2cec45a80ecd6351bc241fafcc