ensure the configuration dialog is not dirty when just open

avoid setting it dirty when reading the setting during the first init

when clicking on cancel, ensure that the c++ backend is reset

BUG: 430743