src/localFileConfiguration/elisaconfigurationdialog.h
@@ -140,6 +140,8 @@ public Q_SLOTS:
 
     void save();
 
+    void cancel();
+
     void setShowProgressInTaskBar(bool showProgressInTaskBar);
 
     void setShowSystemTrayIcon(bool showSystemTrayIcon);
